--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,29 @@
 ---
-
+import NavBar from "@/components/shared/NavBar.astro";
+import PageLayout from "@/layouts/PageLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<PageLayout title="Space Tourism" description="Let's explore the outer space and learn about the universe.">
+  <main class="size-full min-h-screen">
+    <NavBar />
+  </main>
+</PageLayout>
+
+<style>
+  main {
+    background-image: url("../assets/home/background-home-mobile.jpg");
+    @apply bg-cover bg-no-repeat;
+  }
+
+  @media (min-width: 768px) {
+    main {
+      background-image: url("../assets/home/background-home-tablet.jpg");
+    }
+  }
+
+  @media (min-width: 1280px) {
+    main {
+      background-image: url("../assets/home/background-home-desktop.jpg");
+    }
+  }
+</style>
