translated some destination

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import PageLayout from "@/layouts/PageLayout.astro";
 ---
 
 <PageLayout title="Space Tourism" description="Let's explore the outer space and learn about the universe.">
-  <main class="size-full min-h-screen">
+  <main class="flex size-full min-h-screen flex-col justify-between">
     <NavBar />
     <HeroHome client:load />
   </main>
