--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -2,18 +2,17 @@
 import MenuButton from "./MenuButton.vue";
 import MenuSlider from "./MenuSlider.vue";
 import NavLinks from "./NavLinks.vue";
-import TranslateDropdown from "./TranslateDropdown.vue";
 
 const pathname = Astro.url.pathname;
 ---
 
 <nav class="flex items-center justify-between p-6 md:h-24 md:p-0 xl:h-[8.5rem] xl:pt-10">
   <div class="flex shrink-0 items-center justify-center md:w-32">
-    <img src="/favicon.svg" alt="" class="~/md:~size-10/12 object-contain" />
+    <img src="/favicon.svg" alt="" class="object-contain ~/md:~size-10/12" />
   </div>
+  <hr class="z-[1] -mr-8 hidden w-full rounded-full border-white border-opacity-25 xl:block" />
   <NavLinks pathname={pathname.toLowerCase()} client:load />
 
   <MenuButton client:load />
   <MenuSlider active={pathname} client:load />
-  <TranslateDropdown client:idle />
 </nav>
