--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import HeroHome from "@/components/home/HeroHome.vue";
 import NavBar from "@/components/shared/NavBar.astro";
 import PageLayout from "@/layouts/PageLayout.astro";
 ---
@@ -7,7 +6,27 @@ import PageLayout from "@/layouts/PageLayout.astro";
 <PageLayout title="Space Tourism" description="Let's explore the outer space and learn about the universe.">
   <main class="flex size-full min-h-screen flex-col justify-between">
     <NavBar />
-    <HeroHome client:load />
+    <div class="flex flex-col items-center p-6 text-center md:py-32 xl:h-full xl:flex-row xl:items-end xl:px-40 xl:text-left">
+      <div class="flex w-full max-w-[32rem] flex-col gap-6 xl:w-full xl:max-w-full xl:gap-4">
+        <h1 class="text-preset-6 md:text-preset-5 font-barlow-condensed text-base tracking-[0.15rem] text-blue-300 md:text-[1.75rem]">
+          SO, YOU WANT TO TRAVEL TO
+        </h1>
+        <h1 class="text-preset-1 text-[5rem] md:text-[9rem]">SPACE</h1>
+        <p class="text-preset-9 text-[15px] leading-[180%] text-blue-300 md:text-[1rem] xl:text-[1.125rem]">
+          Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it.
+          Well sit back, and relax because we’ll give you a truly out of this world experience!
+        </p>
+      </div>
+
+      <div class="flex w-full items-center justify-center py-28 xl:justify-end xl:p-0">
+        <a
+          class="text-preset-4 flex size-36 items-center justify-center rounded-full bg-white text-lg uppercase text-blue-900 ring-0 duration-200 hover:text-opacity-50 hover:ring-[88px] hover:ring-white hover:ring-opacity-10 md:size-[17rem] md:text-[2rem]"
+          href="/destination"
+        >
+          Explore
+        </a>
+      </div>
+    </div>
   </main>
 </PageLayout>
 
