--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -7,6 +7,7 @@ import PageLayout from "@/layouts/PageLayout.astro";
 <PageLayout title="Crew" description="Meet the crew of members that help you get into space">
   <main class="flex size-full min-h-screen flex-col">
     <NavBar />
+
     <div class="flex flex-col gap-6 p-6 md:p-10 xl:px-40 xl:py-12">
       <div
         class="text-preset-6 md:text-preset-5 flex w-full flex-row items-center justify-center gap-6 text-center font-barlow-condensed text-base uppercase tracking-[0.15rem] md:justify-start md:text-left md:text-xl xl:text-[1.75rem]"
@@ -22,7 +23,7 @@ import PageLayout from "@/layouts/PageLayout.astro";
 <style>
   main {
     background-image: url("../assets/crew/background-crew-mobile.jpg");
-    @apply bg-cover bg-no-repeat;
+    @apply bg-contain bg-top bg-no-repeat;
   }
 
   @media (min-width: 768px) {
