--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -23,7 +23,7 @@ import PageLayout from "@/layouts/PageLayout.astro";
 <style>
   main {
     background-image: url("../assets/crew/background-crew-mobile.jpg");
-    @apply bg-contain bg-top bg-no-repeat;
+    @apply bg-cover bg-no-repeat;
   }
 
   @media (min-width: 768px) {
